Eliminate render blocking css"

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="author" content="Cameron Pittman">
     <title>Cameron Pittman: Portfolio</title>
 
-    <link href="minCSS/style.css" rel="stylesheet">
-    <link href="minCSS/print.css" rel="stylesheet">
+    <style>
+        body { color: #202020; }
+    </style>
 
     <script async>
         WebFontConfig = {
@@ -95,5 +96,9 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
 </div>
+
+<link href="minCSS/style.css" rel="stylesheet" property="stylesheet">
+<link href="minCSS/print.css" rel="stylesheet" property="stylesheet">
+
 </body>
 </html>
