--- a/index.html
+++ b/index.html
@@ -26,21 +26,6 @@
         })();
     </script>
 
-    <script>
-        (function (w, g) {
-            w['GoogleAnalyticsObject'] = g;
-            w[g] = w[g] || function () {
-                        (w[g].q = w[g].q || []).push(arguments)
-                    };
-            w[g].l = 1 * new Date();
-        })(window, 'ga');
-
-        // TODO: replace with your Google Analytics profile ID.
-        ga('create', 'UA-XXXX-Y');
-        ga('send', 'pageview');
-    </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.min.js"></script>
 </head>
 
 <body>
@@ -99,6 +84,22 @@
 
 <link href="minCSS/style.css" rel="stylesheet" property="stylesheet">
 <link href="minCSS/print.css" rel="stylesheet" property="stylesheet">
+
+<script async>
+    (function (w, g) {
+        w['GoogleAnalyticsObject'] = g;
+        w[g] = w[g] || function () {
+                    (w[g].q = w[g].q || []).push(arguments)
+                };
+        w[g].l = 1 * new Date();
+    })(window, 'ga');
+
+    // TODO: replace with your Google Analytics profile ID.
+    ga('create', 'UA-XXXX-Y');
+    ga('send', 'pageview');
+</script>
+<script async src="http://www.google-analytics.com/analytics.js"></script>
+<script async src="js/perfmatters.min.js"></script>
 
 </body>
 </html>
