optimize images with gulp

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
 <header>
-    <a href="/"><img class="headshot" src="img/profilepic.jpg"></a>
+    <a href="/"><img class="headshot" src="production/img/profilepic.jpg"></a>
 
     <p class="name">Cameron Pittman<br><span class="job-title">Course Developer</span></p>
 </header>
@@ -84,7 +84,7 @@
             </li>
 
             <li>
-                <img class="project-img" style="width: 100px;" src="views/images/pizzeria.jpg">
+                <img class="project-img" style="width: 100px;" src="production/img/pizzeria.jpg">
                 <a href="views/pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
