make small version of pizzeria.jpg

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </li>
 
             <li>
-                <img class="project-img" style="width: 100px;" src="production/img/pizzeria.jpg">
+                <img class="project-img" style="width: 100px;" src="production/img/pizzeria_sm.jpg">
                 <a href="views/pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
