start on moving directories

--- a/dev/index.html
+++ b/dev/index.html
@@ -41,7 +41,7 @@
 
 <body>
 <header>
-    <a href="/"><img class="headshot" src="production/img/profilepic.jpg"></a>
+    <a href="/"><img class="headshot" src="../production/img/profilepic.jpg"></a>
 
     <p class="name">Cameron Pittman<br><span class="job-title">Course Developer</span></p>
 </header>
@@ -80,7 +80,7 @@
             </li>
 
             <li>
-                <img class="project-img" style="width: 100px;" src="production/img/pizzeria_sm.jpg">
+                <img class="project-img" style="width: 100px;" src="../production/img/pizzeria_sm.jpg">
                 <a href="views/pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
@@ -93,8 +93,8 @@
     </footer>
 </div>
 
-<link href="minCSS/style.css" rel="stylesheet" property="stylesheet">
-<link href="minCSS/print.css" rel="stylesheet" property="stylesheet">
+<link href="../production/css/style.css" rel="stylesheet" property="stylesheet">
+<link href="../production/css/print.css" rel="stylesheet" property="stylesheet">
 
 </body>
 </html>
