correct hrefs to css

--- a/dev/index.html
+++ b/dev/index.html
@@ -93,8 +93,8 @@
     </footer>
 </div>
 
-<link href="../production/css/style.css" rel="stylesheet" property="stylesheet">
-<link href="../production/css/print.css" rel="stylesheet" property="stylesheet">
+<link href="css/style.css" rel="stylesheet" property="stylesheet">
+<link href="css/print.css" rel="stylesheet" property="stylesheet">
 
 </body>
 </html>
