load css files with javascript

--- a/dev/index.html
+++ b/dev/index.html
@@ -93,7 +93,29 @@
     </footer>
 </div>
 
-<link href="css/style.css" rel="stylesheet" property="stylesheet">
-<link href="css/print.css" rel="stylesheet" property="stylesheet">
+<script>
+    var cb = function () {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/style.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+    };
+    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+            webkitRequestAnimationFrame || msRequestAnimationFrame;
+    if (raf) raf(cb);
+    else window.addEventListener('load', cb);
+</script>
+
+<script>
+    var cb = function () {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/print.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+    };
+    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+            webkitRequestAnimationFrame || msRequestAnimationFrame;
+    if (raf) raf(cb);
+    else window.addEventListener('load', cb);
+</script>
+
 </body>
 </html>
