--- a/index.html
+++ b/index.html
@@ -23,4 +23,24 @@
         // TODO: replace with your Google Analytics profile ID.
         ga('create', 'UA-XXXX-Y');
         ga('send', 'pageview');
-    </script><script async="" src=http://www.google-analytics.com/analytics.js></script><script async="" src=js/perfmatters.min.js></script></head><body><header><a href="/"><img class=headshot src=img/profilepic.jpg></a><p class=name>Cameron Pittman<br><span class=job-title>Course Developer</span></p></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img class=project-img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a><p class=project-desc><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class=project-img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a><p class=project-desc><em>Hey... this class looks familiar.</em></p></li><li><img class=project-img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a><p class=project-desc><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class=project-img style="width: 100px;" src=img/pizzeria_sm.jpg> <a href=views/pizza.html>Cam's Pizzeria</a><p class=project-desc><em>Who wants a performant pizza?</em></p></li></ul></div><footer><p>&copy; Web Performance 2014 <span id=crp-stats></span></p></footer></div><link href=css/style.css rel=stylesheet property=stylesheet><link href=css/print.css rel=stylesheet property=stylesheet></body></html>
+    </script><script async="" src=http://www.google-analytics.com/analytics.js></script><script async="" src=js/perfmatters.min.js></script></head><body><header><a href="/"><img class=headshot src=img/profilepic.jpg></a><p class=name>Cameron Pittman<br><span class=job-title>Course Developer</span></p></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img class=project-img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a><p class=project-desc><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class=project-img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a><p class=project-desc><em>Hey... this class looks familiar.</em></p></li><li><img class=project-img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a><p class=project-desc><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class=project-img style="width: 100px;" src=img/pizzeria_sm.jpg> <a href=views/pizza.html>Cam's Pizzeria</a><p class=project-desc><em>Who wants a performant pizza?</em></p></li></ul></div><footer><p>&copy; Web Performance 2014 <span id=crp-stats></span></p></footer></div><script>
+    var cb = function () {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/style.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+    };
+    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+            webkitRequestAnimationFrame || msRequestAnimationFrame;
+    if (raf) raf(cb);
+    else window.addEventListener('load', cb);
+</script><script>
+    var cb = function () {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/print.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+    };
+    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+            webkitRequestAnimationFrame || msRequestAnimationFrame;
+    if (raf) raf(cb);
+    else window.addEventListener('load', cb);
+</script></body></html>
