try replacing async with async=async since gulp adds =

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Cameron Pittman">
     <title>Cameron Pittman: Portfolio</title>
 
-    <script async>
+    <script async="async">
         WebFontConfig = {
             google: {families: ['Open+Sans::latin']}
         };
@@ -22,7 +22,7 @@
         })();
     </script>
 
-    <script async>
+    <script async="async">
         (function (w, g) {
             w['GoogleAnalyticsObject'] = g;
             w[g] = w[g] || function () {
@@ -35,8 +35,8 @@
         ga('create', 'UA-XXXX-Y');
         ga('send', 'pageview');
     </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.min.js"></script>
+    <script async="async" src="http://www.google-analytics.com/analytics.js"></script>
+    <script async="async" src="js/perfmatters.min.js"></script>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
             </li>
 
             <li>
-                <img class="project-img" style="width: 100px;" src="img/pizzeria_sm.jpg">
+                <img class="project-img" src="img/pizzeria_sm.jpg">
                 <a href="views/pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
@@ -93,7 +93,7 @@
     </footer>
 </div>
 
-<script async>
+<script async="async">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/style.css';
@@ -105,7 +105,7 @@
     else window.addEventListener('load', cb);
 </script>
 
-<script async>
+<script async="async">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/print.css';
