try defer attribute on css scripts

--- a/dev/index.html
+++ b/dev/index.html
@@ -93,7 +93,7 @@
     </footer>
 </div>
 
-<script async="async">
+<script defer="defer">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/style.css';
@@ -105,7 +105,7 @@
     else window.addEventListener('load', cb);
 </script>
 
-<script async="async">
+<script defer="defer">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/print.css';
