--- a/dev/index.html
+++ b/dev/index.html
@@ -8,21 +8,6 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <script async="async">
-        WebFontConfig = {
-            google: {families: ['Open+Sans::latin']}
-        };
-        (function () {
-            var wf = document.createElement('script');
-            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-                    '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-            wf.type = 'text/javascript';
-            wf.async = 'true';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(wf, s);
-        })();
-    </script>
-
-    <script async="async">
         (function (w, g) {
             w['GoogleAnalyticsObject'] = g;
             w[g] = w[g] || function () {
@@ -35,6 +20,21 @@
         ga('create', 'UA-XXXX-Y');
         ga('send', 'pageview');
     </script>
+
+    <script async="async">
+        WebFontConfig = {
+            google: {
+                families: ['Open Sans']
+            }
+        };
+
+        (function(d) {
+            var wf = d.createElement('script'), s = d.scripts[0];
+            wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+            s.parentNode.insertBefore(wf, s);
+        })(document);
+    </script>
+
     <script async="async" src="http://www.google-analytics.com/analytics.js"></script>
     <script async="async" src="js/perfmatters.min.js"></script>
 </head>
