Inline webfont script at bottom of body

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,20 +21,6 @@
         ga('send', 'pageview');
     </script>
 
-    <script async="async">
-        WebFontConfig = {
-            google: {
-                families: ['Open Sans']
-            }
-        };
-
-        (function(d) {
-            var wf = d.createElement('script'), s = d.scripts[0];
-            wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
-            s.parentNode.insertBefore(wf, s);
-        })(document);
-    </script>
-
     <script async="async" src="http://www.google-analytics.com/analytics.js"></script>
     <script async="async" src="js/perfmatters.min.js"></script>
 </head>
@@ -92,6 +78,20 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
 </div>
+
+<script>
+    WebFontConfig = {
+        google: {
+            families: ['Open Sans']
+        }
+    };
+
+    (function(d) {
+        var wf = d.createElement('script'), s = d.scripts[0];
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+        s.parentNode.insertBefore(wf, s);
+    })(document);
+</script>
 
 <script defer="defer">
     var cb = function () {
