--- a/production/index.html
+++ b/production/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="Cameron Pittman Portfolio"><meta name=author content="Cameron Pittman"><title>Cameron Pittman: Portfolio</title><script async=async>
-        (function (w, g) {
-            w['GoogleAnalyticsObject'] = g;
-            w[g] = w[g] || function () {
-                        (w[g].q = w[g].q || []).push(arguments)
-                    };
-            w[g].l = 1 * new Date();
-        })(window, 'ga');
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="Cameron Pittman Portfolio"><meta name=author content="Cameron Pittman"><title>Cameron Pittman: Portfolio</title></head><body><header><a href="/"><img class=headshot src=img/profilepic.jpg></a><p class=name>Cameron Pittman<br><span class=job-title>Course Developer</span></p></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img class=project-img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a><p class=project-desc><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class=project-img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a><p class=project-desc><em>Hey... this class looks familiar.</em></p></li><li><img class=project-img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a><p class=project-desc><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class=project-img src=img/pizzeria_sm.jpg> <a href=views/pizza.html>Cam's Pizzeria</a><p class=project-desc><em>Who wants a performant pizza?</em></p></li></ul></div><footer><p>&copy; Web Performance 2014 <span id=crp-stats></span></p></footer></div><script async=async>
+    (function (w, g) {
+        w['GoogleAnalyticsObject'] = g;
+        w[g] = w[g] || function () {
+                    (w[g].q = w[g].q || []).push(arguments)
+                };
+        w[g].l = 1 * new Date();
+    })(window, 'ga');
 
-        // TODO: replace with your Google Analytics profile ID.
-        ga('create', 'UA-XXXX-Y');
-        ga('send', 'pageview');
-    </script><script async=async src=http://www.google-analytics.com/analytics.js></script><script async=async src=js/perfmatters.min.js></script></head><body><header><a href="/"><img class=headshot src=img/profilepic.jpg></a><p class=name>Cameron Pittman<br><span class=job-title>Course Developer</span></p></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img class=project-img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a><p class=project-desc><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class=project-img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a><p class=project-desc><em>Hey... this class looks familiar.</em></p></li><li><img class=project-img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a><p class=project-desc><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class=project-img src=img/pizzeria_sm.jpg> <a href=views/pizza.html>Cam's Pizzeria</a><p class=project-desc><em>Who wants a performant pizza?</em></p></li></ul></div><footer><p>&copy; Web Performance 2014 <span id=crp-stats></span></p></footer></div><script>
+    // TODO: replace with your Google Analytics profile ID.
+    ga('create', 'UA-XXXX-Y');
+    ga('send', 'pageview');
+</script><script async=async src=http://www.google-analytics.com/analytics.js></script><script async=async src=js/perfmatters.min.js></script><script>
     WebFontConfig = {
         google: {
             families: ['Open Sans']
