Try asyncs on all the scripts again

--- a/dev/index.html
+++ b/dev/index.html
@@ -80,7 +80,7 @@
 <script async="async" src="http://www.google-analytics.com/analytics.js"></script>
 <script async="async" src="js/perfmatters.min.js"></script>
 
-<script>
+<script async="async">
     WebFontConfig = {
         google: {
             families: ['Open Sans']
@@ -94,7 +94,7 @@
     })(document);
 </script>
 
-<script defer="defer">
+<script async="async">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/style.css';
@@ -106,7 +106,7 @@
     else window.addEventListener('load', cb);
 </script>
 
-<script defer="defer">
+<script async="async">
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/print.css';
