--- a/production/index.html
+++ b/production/index.html
@@ -10,7 +10,7 @@
     // TODO: replace with your Google Analytics profile ID.
     ga('create', 'UA-XXXX-Y');
     ga('send', 'pageview');
-</script><script async=async src=http://www.google-analytics.com/analytics.js></script><script async=async src=js/perfmatters.min.js></script><script>
+</script><script async=async src=http://www.google-analytics.com/analytics.js></script><script async=async src=js/perfmatters.min.js></script><script async=async>
     WebFontConfig = {
         google: {
             families: ['Open Sans']
@@ -22,7 +22,7 @@
         wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
         s.parentNode.insertBefore(wf, s);
     })(document);
-</script><script defer=defer>
+</script><script async=async>
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/style.css';
@@ -32,7 +32,7 @@
             webkitRequestAnimationFrame || msRequestAnimationFrame;
     if (raf) raf(cb);
     else window.addEventListener('load', cb);
-</script><script defer=defer>
+</script><script async=async>
     var cb = function () {
         var l = document.createElement('link'); l.rel = 'stylesheet';
         l.href = 'css/print.css';
