--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description content="Cameron Pittman Portfolio"><meta name=author content="Cameron Pittman"><title>Cameron Pittman: Portfolio</title></head><body><header><a href="/"><img class=headshot src=img/profilepic.jpg></a><p class=name>Cameron Pittman<br><span class=job-title>Course Developer</span></p></header><div class=container><div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class=content><ul><li><img class=project-img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a><p class=project-desc><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class=project-img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a><p class=project-desc><em>Hey... this class looks familiar.</em></p></li><li><img class=project-img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a><p class=project-desc><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class=project-img src=img/pizzeria_sm.jpg> <a href=views/pizza.html>Cam's Pizzeria</a><p class=project-desc><em>Who wants a performant pizza?</em></p></li></ul></div><footer><p>&copy; Web Performance 2014 <span id=crp-stats></span></p></footer></div><script async=async>
+<!DOCTYPE html><html lang="en" style="overflow-y: scroll;"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="Cameron Pittman Portfolio"><meta name="author" content="Cameron Pittman"><title>Cameron Pittman: Portfolio</title></head><body style="background: #fff; color: #333; font-family: 'Open Sans', sans-serif; font-size: 14px; font-weight: 400; line-height: 1.61; margin: 0;"><header style="color: #C90B0B; margin: 0 auto; max-width: 45em; padding: 0 0.5em;"><a href="/" style="color: #12C;"><img class="headshot" src="img/profilepic.jpg" style="border: 0; border-radius: 40px; float: left; max-width: 100%;"></a><p class="name" style="font-size: 1.5em; font-weight: bold; padding-left: 4em;">Cameron Pittman<br><span class="job-title" style="font-size: 0.8em; font-weight: normal;">Course Developer</span></p></header><div class="container" style="margin: 0 auto; max-width: 45em;"><div class="hero" style="background-color: #f8f8f8; border-bottom: 1px solid #ccc; border-top: 1px solid #ccc; font-size: 1.2em; padding: 2em;"><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class="content" style="padding: 1em 1em;"><ul style="font-size: 1.1em; list-style-type: none; margin: 1em 0; padding: 0 0 0 20px;"><li><img class="project-img" src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100" style="border: 0; float: left
+    padding-right: 1em; max-width: 100%;"> <a href="project-2048.html" style="color: #12C;">Build Your Own 2048!</a><p class="project-desc" style="font-size: 0.9em;"><em>I made my own version of 2048. How cool is that!?</em></p></li><li><img class="project-img" src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100" style="border: 0; float: left
+    padding-right: 1em; max-width: 100%;"> <a href="project-webperf.html" style="color: #12C;">Website Performance Optimization</a><p class="project-desc" style="font-size: 0.9em;"><em>Hey... this class looks familiar.</em></p></li><li><img class="project-img" src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100" style="border: 0; float: left
+    padding-right: 1em; max-width: 100%;"> <a href="project-mobile.html" style="color: #12C;">Mobile Web Development</a><p class="project-desc" style="font-size: 0.9em;"><em>Making mobile apps isn't so hard after all.</em></p></li><li><img class="project-img" src="img/pizzeria_sm.jpg" style="border: 0; float: left
+    padding-right: 1em; max-width: 100%;"> <a href="views/pizza.html" style="color: #12C;">Cam's Pizzeria</a><p class="project-desc" style="font-size: 0.9em;"><em>Who wants a performant pizza?</em></p></li></ul></div><footer style="border-top: 1px solid #ccc; margin: 0 auto; max-width: 45em; padding: 0 0.5em;"><p>&copy; Web Performance 2014 <span id="crp-stats" style="float: right; font-style: italic;"></span></p></footer></div><script async="async">
     (function (w, g) {
         w['GoogleAnalyticsObject'] = g;
         w[g] = w[g] || function () {
@@ -10,7 +14,7 @@
     // TODO: replace with your Google Analytics profile ID.
     ga('create', 'UA-XXXX-Y');
     ga('send', 'pageview');
-</script><script async=async src=http://www.google-analytics.com/analytics.js></script><script async=async src=js/perfmatters.min.js></script><script async=async>
+</script><script async="async" src="http://www.google-analytics.com/analytics.js"></script><script async="async" src="js/perfmatters.min.js"></script><script async="async">
     WebFontConfig = {
         google: {
             families: ['Open Sans']
@@ -22,24 +26,4 @@
         wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
         s.parentNode.insertBefore(wf, s);
     })(document);
-</script><script async=async>
-    var cb = function () {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = 'css/style.css';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-    };
-    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-            webkitRequestAnimationFrame || msRequestAnimationFrame;
-    if (raf) raf(cb);
-    else window.addEventListener('load', cb);
-</script><script async=async>
-    var cb = function () {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = 'css/print.css';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-    };
-    var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-            webkitRequestAnimationFrame || msRequestAnimationFrame;
-    if (raf) raf(cb);
-    else window.addEventListener('load', cb);
 </script></body></html>
