--- a/dev/index.html
+++ b/dev/index.html
@@ -81,7 +81,7 @@
 </script>
 
 <script async="async" src="http://www.google-analytics.com/analytics.js"></script>
-<script async="async" src="js/perfmatters.min.js"></script>
+<script async="async" src="js/perfmatters.js"></script>
 
 <script async="async">
     WebFontConfig = {
