--- a/production/index.html
+++ b/production/index.html
@@ -14,7 +14,7 @@
     // TODO: replace with your Google Analytics profile ID.
     ga('create', 'UA-XXXX-Y');
     ga('send', 'pageview');
-</script><script async="async" src="http://www.google-analytics.com/analytics.js"></script><script async="async" src="js/perfmatters.min.js"></script><script async="async">
+</script><script async="async" src="http://www.google-analytics.com/analytics.js"></script><script async="async" src="js/perfmatters.js"></script><script async="async">
     WebFontConfig = {
         google: {
             families: ['Open Sans']
