Fix link to pizza.html for production site

--- a/dev/index.html
+++ b/dev/index.html
@@ -54,7 +54,7 @@
 
             <li>
                 <img class="project-img" src="img/pizzeria_sm.jpg">
-                <a href="views/pizza.html">Cam's Pizzeria</a>
+                <a href="pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
             </li>
