Update README before project submission. Add comment to index.html

--- a/dev/index.html
+++ b/dev/index.html
@@ -54,6 +54,9 @@
 
             <li>
                 <img class="project-img" src="img/pizzeria_sm.jpg">
+
+                <!-- link below won't work from dev - should be 'views/pizza.html'. Made change for simplifying
+                directory structure of 'production/' -->
                 <a href="pizza.html">Cam's Pizzeria</a>
 
                 <p class="project-desc"><em>Who wants a performant pizza?</em></p>
